# Nodewhisper

./: .env.example  .gitignore  =2.0  README.md  pytest.ini
.github/workflows/: tests.yml
Backend/: pyproject.toml  requirements.txt
Backend/app/: main.py
Backend/app/api/v1/: deps.py
Backend/app/api/v1/routers/: auth.py  cases.py  wallets.py  ws.py
Backend/app/api/v1/schemas/: auth.py  case.py  case_wallet.py  wallet.py
Backend/app/core/: config.py  security.py
Backend/app/db/: base.py  session.py
Backend/app/db/migrations/: env.py
Backend/app/db/migrations/versions/: 3b77a840c2bd_case_wallet_evidence_metadata.py  84d4541a91e4_initial_tables.py  fb5492d3690e_add_case_wallets_table.py
Backend/app/models/: __init__.py  associations.py  case.py  case_wallet.py  user.py  wallet.py
Backend/app/services/: auth_service.py  case_service.py  wallet_service.py
Backend/app/tests/: conftest.py  test_auth.py  test_cases.py  test_wallet.py
